2007-10-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/av-cp-playlisttreeview.c:

	Make the tree store search function very generic and add recursive
	search option to it.

2007-10-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/media-server-proxy.c:
	* src/av-cp/media-server-proxy.h:

	Add getter for DIDL-Lite parser to media server proxy.

2007-10-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/av-cp-playlisttreeview.c:

	Implement media server proxy addition and search to/from the
	treemodel.

2007-10-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* data/gupnp-av-cp.glade:
	* src/av-cp/av-cp-playlisttreeview.c:

	Playlist should be a tree rather than a list.

2007-10-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/media-server-proxy.c:

	Use g_error_free instead of g_free on GError objects.

2007-10-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/didl-lite-object.c:
	* src/av-cp/didl-lite-object.h:

	Basic implementation of DIDL-Lite object representation.

	* src/av-cp/didl-lite-parser.c:
	* src/av-cp/didl-lite-parser.h:

	Basic implementation of DIDL-Lite document parser.

	* src/av-cp/media-server-proxy.c:
	* src/av-cp/media-server-proxy.h:

	- Implement browsing.
	- Remove commented-out code.

	* src/av-cp/xml-util.c:
	* src/av-cp/xml-util.h:

	Misc utilities for inspecting xmlNodes. Borrowed from gupnp package,
	trimmed and modified accordingly.

	* src/av-cp/Makefile.am:

	Add newl-added modules to build.

	* src/av-cp/av-cp-playlisttreeview.c:
	* src/av-cp/av-cp-playlisttreeview.h:
	* src/av-cp/av-cp.c:

	Basic MediaServer related code.

2007-10-05  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/av-cp/Makefile.am:
	* src/av-cp/av-cp.c:
	* src/av-cp/av-resource-factory.c:
	* src/av-cp/av-resource-factory.h:

	GUPnP API update: Register the proxy subclasses with the resource
	factory of the control point rather than creating a subclass of the
	resource factory.

2007-10-03  Zeeshan Ali  <zeenix@gstreamer.net>
